# claimmesh

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: efb28469585d_initial_tables.py
backend/api/: deps.py
backend/api/routers/: claims.py  customers.py  health.py  reports.py  upload.py
backend/core/: cache.py  config.py  exceptions.py  logging.py  security.py
backend/db/: base.py  models.py
backend/schemas/: claim.py  customer.py  report.py  response.py  task.py
backend/scripts/: start.sh
backend/services/: claims.py  customer.py  payout.py  taskservice.py  validation.py
backend/utils/: clients.py
gateway/: krakend.json
k8s/: minikube-stack.yaml
notification_service/: .dockerignore  Dockerfile  main.py  pyproject.toml
prometheus/: prometheus.yml
worker/: .env.example  .gitignore  Dockerfile  payout.py  pyproject.toml  tasks.py  validation.py
