[project]
name = "worker"
version = "0.1.0"
description = "Celery Data & Queue Processing Worker"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
  "celery>=5.6.3",
  "dotenv>=0.9.9",
  "loguru>=0.7.3",
  "pandas>=3.0.3",
  "pika>=1.4.1",
  "asyncpg>=0.31.0",
  "sqlalchemy[asyncio]",
  "psycopg2-binary>=2.9.12",
  "redis>=8.0.1",
]
